--- a/index.html
+++ b/index.html
@@ -6,9 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="Navbar">
+            <h2 class="Logo"> <a href="#">Portfolio</a> </h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Experience</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="home">
+        <div class="half-width content">
+            <h4>Hello,Welcome To</h4>
+            <h1>Harun's World</h1>
+            <h3>Working as a <span>developer</span></h3>
+            <div>
+                <a class="button" href="">Let's Talk</a>
+            </div>
+        </div>
+        <div class="half-width">
+            <img src="./images/image 12.png" alt="">
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="half-width">
+            
+        </div>
+        <div class="half-width">
+
+        </div>
+    </section>
 </body>
 </html>
